--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,11 +28,13 @@ import Layout from "@layouts/Layout.astro";
                 <div class="wheels"></div>
               </div> 
               <!--End drivng truck -->
+             <br>
               <h2>Same Day Household Appliance Repair, Installation, and Maintenance</h2>
+             <br>
               <p>Our same day appliance repair experts will fix your appliance on the first visit in 90% of cases. Our trained technicians have parts on hand to ensure a quick repair.</p>
+              <br>
               <div class="category-items d-flex justify-content-between">
-                    
-                <span style='padding:0 20px 0 20px;' title='Same day refrigerator repair Los Angeles'>
+               <span style='padding:0 20px 0 20px;' title='Same day refrigerator repair Los Angeles'>
 <img width="120" height="150" src="../images/refrigerator-repair-los-angeles.webp" alt="Same day expert refrigerator repair - Los Angeles">
 <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Refrigerator Repair</p>
 <a style="width:120px" title="Same day washer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
@@ -99,9 +101,7 @@ import Layout from "@layouts/Layout.astro";
                           <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">BBQ Grill Repair</p>
                           <a style="width:120px" title="Same day bbq grill repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
-                                  </div>
-          </div>
-                  </div>
+                                  </div> </div></div>
           
           <!-- Grey BG-->
     <div class="category category-1" style="background-color:#F2F1F0">
@@ -109,90 +109,78 @@ import Layout from "@layouts/Layout.astro";
      <h2>Same Day Commercial Appliance Repair, Maintenance, and Installation</h2>
          <p>Our same day commercial appliance repair experts are trained commercially .</p>
               <div class="category-items d-flex justify-content-between">
-                  <a title="Same day refrigerator repair Los Angeles" style="padding:0 20px 0 0;" href="contact/book-online.html" target="_blank" >
+                  <span style="padding:0 20px 0 0;">
                       <img width="120" height="150" loading="lazy" src="images/commercial-refrigerator-repair-los-angeles.webp" alt="Same day commercial refrigerator repair - Los Angeles">
-                          <span>Refrigerator Repair</span>
-                          <span class="button">BOOK
-                         </span>
-                  </a>
-                  <a title="Same day freezer repair Los Angeles" style="padding:0 20px 0 0;" href="contact/book-online.html" target="_blank">
+                      <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Refrigerator Repair</p>
+                          <a style="width:120px" title="Same day refrigerator repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                        </span>
+
+                  <span style="padding:0 20px 0 0;">
                       <img width="120" height="150" loading="lazy" src="images/commercial-frreezer-repair-los-angeles.webp" alt="Same day commercial freezer repair - Los Angeles">
-                          <span>Freezer Repair</span>
-                          <span class="button">BOOK
-                         </span>
-                  </a>
+                      <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Freezer Repair</p>
+                           <a style="width:120px" title="Same day refrigerator repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                        </span>
                   
-                  <a title="Same day washer repair Los Angeles" style="padding:0 20px 0 0;" href="contact/book-online.html" target="_blank">
+                  <span style="padding:0 20px 0 0;">
     <img width="120" height="150" loading="lazy" src="images/commercial-washer-repair-los-angeles.webp" alt="Same day commercial washer repair - Los Angeles">
-    <span>Washer Repair</span>
-    <span class="button">BOOK
-    </span>
-    </a>
+    <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Washer Repair</p>
+    <a style="width:120px" title="Same day washer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+</span>
                   
-                  <a title="Same day dryer repair Los Angeles" style="padding:0 20px 0 0;" href="contact/book-online.html" target="_blank">
+                  <span style="padding:0 20px 0 0;">
     <img width="120" height="150" loading="lazy" src="images/commercial-dryer-repair-los-angeles.webp" alt="Same day commercial dryer repair - Los Angeles">
-    <span>Dryer Repair</span>
-    <span class="button">BOOK
-    </span>
-    </a>
+    <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Dryer Repair</p>
+    <a style="width:120px" title="Same day dryer repair Los Angeles href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+</span>
                   
-                  <a title="Same day stove repair Los Angeles"style="padding:0 20px 0 0;" href="contact/book-online.html" target="_blank">
+                  <span style="padding:0 20px 0 0;">
     <img width="120" height="150" loading="lazy" src="images/commercial-stove-repair-los-angeles.webp" alt="Same day commercial stove repair - Los Angeles">
-    <span>Stove Repair</span>
-    <span class="button">BOOK
-    </span>
-    </a>
+    <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Stove Repair</p>
+    <a style="width:120px" title="Same day stove repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+</span>
                   
-                  <a title="Same day dishwasher repair Los Angeles" style="padding:0 20px 0 0;" href="contact/book-online.html" target="_blank">
+                  <span style="padding:0 20px 0 0;">
     <img width="120" height="150" loading="lazy" src="images/commercial-dishwasher-repair-los-angeles.webp" alt="Same day commercial dishwasher repair - Los Angeles">
-    <span>Dishwasher Repair</span>
-    <span class="button">BOOK
-    </span>
-    </a>
+    <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Dishwasher Repair</p>
+    <a style="width:120px" title="Same day dishwasher repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+</span>
     </div>
        <div class="container">
               <div class="category-items d-flex justify-content-between">
-                  <a title="Same day oven repair Los Angeles" style="padding:0 20px 0 0;" href="contact/book-online.html" target="_blank">
+                  <span style="padding:0 20px 0 0;">
     <img width="120" height="150" loading="lazy" src="images/commercial-oven-repair-los-angeles.webp" alt="Same day commercial oven repair - Los Angeles">
-    <span>Oven Repair</span>
-    <span class="button">BOOK
-    </span>
-    </a>
-                  
-                  <a title="Same day walk-in cooler repair Los Angeles" style="padding:0 20px 0 0;" href="contact/book-online.html" target="_blank">
+    <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Oven Repair</p>
+    <a style="width:120px" title="Same day oven repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+</span>        
+                  <span style="padding:0 20px 0 0;">
     <img width="120" height="150" loading="lazy" src="images/commercial-walk-in-cooler-repair-los-angeles.webp" alt="Same day commercial walk-in cooler repair - Los Angeles">
-    <span>Walk-in cooler Repair</span>
-    <span class="button">BOOK
-    </span>
-    </a>
-                  
-                  <a title="Same day walk-in freezer repair Los Angeles" style="padding:0 20px 0 0;" href="contact/book-online.html" target="_blank">
+    <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Walk-in cooler Repair</p>
+    <a style="width:120px" title="Same day walk-in cooler repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+</span>
+
+<span style="padding:0 20px 0 0;">
     <img width="120" height="150" loading="lazy" src="images/commercial-walk-in-freezer-repair-los-angeles.webp" alt="Same day commercial walk-in freezer repair - Los Angeles">
-    <span>Walk-in freezer Repair</span>
-    <span class="button">BOOK
-    </span>
-    </a>
+    <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Walk-in freezer Repair</p>
+    <a style="width:120px" title="Same day walk-in freezer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+</span> 
                   
-                  <a title="Same day ice mashine repair Los Angeles" style="padding:0 20px 0 0;" href="contact/book-online.html" target="_blank">
+                  <span style="padding:0 20px 0 0;">
     <img width="120" height="150" loading="lazy" src="images/commercial-ice-machine-repair-los-angeles.webp" alt="Same day commercial ice machine repair - Los Angeles">
-    <span>Ice machine Repair</span>
-    <span class="button">BOOK
-    </span>
-    </a>
+    <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Ice machine Repair</p>
+    <a style="width:120px" title="Same day ice mashine repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+</span> 
                   
-                  <a title="Same day slushie mashine repair Los Angeles" style="padding:0 20px 0 0;" href="contact/book-online.html" target="_blank">
+                  <span style="padding:0 20px 0 0;">
     <img width="120" height="150" loading="lazy" src="images/commercial-slushie-mashine-repair-los-angeles.webp" alt="Same day commercial slush machine repair - Los Angeles">
-    <span>Slushie machine Repair</span>
-    <span class="button">BOOK
-    </span>
-    </a>
+    <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Slushie machine Repair</p>
+    <a style="width:120px" title="Same day slushie mashine repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+</span> 
                   
-                  <a title="Same day showcase refrigerator/ freezer Los Angeles" style="padding:0 20px 0 0;" href="contact/book-online.html" target="_blank">
+                  <span style="padding:0 20px 0 0;">
     <img width="120" height="150" loading="lazy" src="images/commercial-showcase-refrigerarot-freezer-repair-los-angeles.webp" alt="Same day commercial showcase refrigerator/freezer repair - Los Angeles">
-    <span>Showcase refrigerator/freezer Repair</span>
-    <span class="button">BOOK
-    </span>
-    </a>
+    <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Showcase refrigerator/freezer Repair</p>
+    <a style="width:120px" title="Same day showcase refrigerator/ freezer Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+</span>
     </div>
               <div class="category-items d-flex justify-content-between">
                   <a title="Same day wine cooler repair Los Angeles" style="padding:0 20px 0 0;" href="contact/book-online.html" target="_blank">
