--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,16 +68,16 @@ import Layout from "@layouts/Layout.astro";
                           <a style="width:120px" title="Same day dishwasher repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span> </div>
                         
-                        <div class="category-items d-flex justify-content-between">
+     <div class="category-items d-flex justify-content-between">
      <span style='padding:0 20px 0 20px;'' title='Same day refrigerator repair Los Angeles'>
-                            <img width="120" height="150" src="../images/refrigerator-repair-los-angeles.webp" alt="Same day expert refrigerator repair - Los Angeles">
-                            <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Refrigerator Repair</p>
-                            <a style="width:120px" title="Same day refrigerator repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
-                        </span> 
-                                            <span style='padding:0 20px 0 20px;'>
-                            <img width="120" height="150" src="../images/freezer-stove-repair-los-angeles.webp" alt="Same day expert freezer repair - Los Angeles">
-                            <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Freezer Repair</p>
-                            <a style="width:120px" title="Same day freezer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+     <img width="120" height="150" src="../images/oven-repair-los-angeles.webp" alt="Same day expert refrigerator repair - Los Angeles">
+     <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Oven Repair</p>
+     <a style="width:120px" title="Same day oven repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+      </span> 
+      <span style='padding:0 20px 0 20px;'>
+      <img width="120" height="150" src="../images/cooktop-repair-los-angeles.webp" alt="Same day expert freezer repair - Los Angeles">
+       <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Coocktop Repair</p>
+       <a style="width:120px" title="Same day freezer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
                                         <span style="padding:0 40px 0 20px;">
                           <img width="120" height="150" src="images/microwave-repair-los-angeles.webp" alt="Same day microwave repair - Los Angeles">
@@ -130,8 +130,7 @@ import Layout from "@layouts/Layout.astro";
                   <span style="padding:0 20px 0 0;">
     <img width="120" height="150" loading="lazy" src="images/commercial-dryer-repair-los-angeles.webp" alt="Same day commercial dryer repair - Los Angeles">
     <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Dryer Repair</p>
-    <a style="width:120px" title="Same day dryer repair Los Angeles href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
-</span>
+    <a style="width:120px" title="Same day dryer repair Los Angeles href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a></span>
                   
                   <span style="padding:0 20px 0 0;">
     <img width="120" height="150" loading="lazy" src="images/commercial-stove-repair-los-angeles.webp" alt="Same day commercial stove repair - Los Angeles">
@@ -183,36 +182,31 @@ import Layout from "@layouts/Layout.astro";
 </span>
     </div>
               <div class="category-items d-flex justify-content-between">
-                  <a title="Same day wine cooler repair Los Angeles" style="padding:0 20px 0 0;" href="contact/book-online.html" target="_blank">
+                  <span style="padding:0 20px 0 0;">
     <img width="120" height="150" loading="lazy" src="images/commercial-wine-cooler-freezer-repair-los-angeles.webp" alt="Same day Fireplace Repair Services">
-    <span>Wine cooler Repair</span>
-    <span class="button">BOOK
-    </span>
-    </a>
-                  <a title="Same day bar refrigerator repair Los Angeles" style="padding:0 20px 0 0;" href="contact/book-online.html" target="_blank">
+    <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Wine cooler Repair</p>
+    <a style="width:120px" title="Same day wine cooler repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+</span>
+                  <span style="padding:0 20px 0 0;">
     <img width="120" height="150" loading="lazy" src="images/commercial-bar-refrigerator-freezer-repair-los-angeles.webp" alt="Same day Fireplace Repair Services">
-    <span>Bar refrigerator Repair</span>
-    <span class="button">BOOK
-    </span>
-    </a>
-                  <a title="Same day gas dryer repair Los Angeles" style="padding:0 20px 0 0;" href="contact/book-online.html" target="_blank">
+    <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Bar refrigerator Repair</p>
+    <a style="width:120px" title="Same day bar refrigerator repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+</span>
+                  <span style="padding:0 20px 0 0;">
     <img width="120" height="150" loading="lazy" src="images/commercial-gas-dryer-repair-los-angeles.webp" alt="Same day Gas Dryer Repair Services">
-    <span>Gas Dryer Repair</span>
-    <span class="button">BOOK
-    </span>
-    </a>
-                  <a title="Same day Laundry Speed Queen repair Los Angeles" style="padding:0 20px 0 0;" href="contact/book-online.html" target="_blank">
+    <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Gas Dryer Repair</p>
+    <a style="width:120px" title="Same day gas dryer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+</span>
+                  <span style="padding:0 20px 0 0;">
     <img width="120" height="150" loading="lazy" src="images/commercial-laundry-speed-queen-repair-los-angeles.webp" alt="Same day Laundry Speed Queen Repair Services">
-    <span>Laundry Speed Queen Repair</span>
-    <span class="button">BOOK
-    </span>
-    </a>
-                  <a title="Same day wine cellar repair Los Angeles" style="padding:0 20px 0 0;" href="contact/book-online.html" target="_blank">
+    <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Laundry Speed Queen Repair</p>
+    <a style="width:120px" title="Same day Laundry Speed Queen repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+</span>
+                  <span style="padding:0 20px 0 0;">
     <img width="120" height="150" loading="lazy" src="images/wine-cellar-reapir-los-angeles.webp" alt="Same day Wine Cellar Repair Services">
-    <span>Wine Cellar Repair</span>
-    <span class="button">BOOK
-    </span>
-    </a>
+    <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Wine Cellar Repair</p>
+    <a style="width:120px" title="Same day wine cellar repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+</span>
           </div></div></div>
     <div class="category category-0" style="background-color:#ffffff;">
     <div class="container">
@@ -220,41 +214,36 @@ import Layout from "@layouts/Layout.astro";
     <p>Expert repair and installation of heating ventilation and AC by our trained technicians</p>
     <br>
               <div class="category-items d-flex justify-content-between">
-                                          <a title="Same day air conditioner repair Los Angeles" style="padding:0 20px 0 20px;" href="contact/book-online.html" target="_blank">   <img width="120" height="122" loading="lazy" src="images/air-conditioner-repair-installation-los-angeles.webp" alt="Same day Refrigerator Repair Los Angeles">
-                          <span>Air conditioner Repair</span>
-                          <span class="button">BOOK
-                         </span>
-                      </a>
-                                          <a title="Same day furnce repair Los Angeles" style="padding:0 20px 0 20px;" href="contact/book-online.html" target="_blank">
+    <span style="padding:0 20px 0 20px;"> 
+         <img width="120" height="122" loading="lazy" src="images/air-conditioner-repair-installation-los-angeles.webp" alt="Same day Refrigerator Repair Los Angeles">
+         <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Air conditioner Repair</p>
+                          <a style="width:120px" title="Same day air conditioner repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+</span>
+                                          <span style="padding:0 20px 0 20px;">
                           <img width="120" height="122" loading="lazy" src="images/furnace-repair-installation-los-angeles.webp" alt="Same day Refrigerator Repair - Los Angeles">
-                          <span>Furnace Repair</span>
-                          <span class="button">BOOK
-                         </span>
-                      </a>
-                                          <a title="Same day heat pump repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
+                          <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Furnace Repair</p>
+                          <a style="width:120px" title="Same day furnce repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+</span>
+                                          <span style="padding:0 40px 0 20px;">
                           <img width="120" height="122" loading="lazy" src="images/heat-pump-repair-installation-los-angeles.webp" alt="Same day Refrigerator repair Los Angeles">
-                          <span>Heat Pump Repair</span>
-                          <span class="button">BOOK
-                         </span>
-                      </a>
-                                          <a title="Same day water heater repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
+                          <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Heat Pump Repair</p>
+                          <a style="width:120px" title="Same day heat pump repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                        </span>
+                        <span style="padding:0 40px 0 20px;">
                           <img width="120" height="122" loading="lazy" src="images/water-heater-repair-installation-los-angeles.webp" alt="Same day Dryer repair Los Angeles">
-                          <span>Water Heater Repair</span>
-                          <span class="button">BOOK
-                         </span>
-                      </a>
-                                          <a title="Same day wall heater repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
+                          <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Water Heater Repair</p>
+                          <a style="width:120px" title="Same day water heater repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                        </span>
+                         <span style="padding:0 40px 0 20px;">
                           <img width="120" height="122" loading="lazy" src="images/wall-heater-repair-installation-los-angeles.webp" alt="Range/Stove">
-                          <span>Wall heater Repair</span>
-                          <span class="button">BOOK
-                         </span>
-                      </a>
-                                          <a title="Same day duckts cleaning repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
+                          <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Wall heater Repair</p>
+                          <a style="width:120px" title="Same day wall heater repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                        </span>
+                          <span title="Same day duckts cleaning repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
                           <img width="120" height="122" loading="lazy" src="images/duck-cleaning-los-angeles.webp" alt="Range/Stove">
-                          <span>Ducts Cleaning Repair</span>
-                          <span class="button">BOOK
-                         </span>
-                      </a>
+                          <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Ducts Cleaning Repair</p>
+                          <a style="width:120px" title="Same day wall heater repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                        </span>
                                           </div></div></div>
     <!--The above is the main content for aea pages-->
     <div class="category-items d-flex justify-content-between" style="background-color:#F2F1F0">
