--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -130,7 +130,8 @@ import Layout from "@layouts/Layout.astro";
                   <span style="padding:0 20px 0 0;">
     <img width="120" height="150" loading="lazy" src="images/commercial-dryer-repair-los-angeles.webp" alt="Same day commercial dryer repair - Los Angeles">
     <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Dryer Repair</p>
-    <a style="width:120px" title="Same day dryer repair Los Angeles href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a></span>
+    <a style="width:120px" title="Same day dryer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US</a>
+</span>
                   
                   <span style="padding:0 20px 0 0;">
     <img width="120" height="150" loading="lazy" src="images/commercial-stove-repair-los-angeles.webp" alt="Same day commercial stove repair - Los Angeles">
@@ -248,7 +249,61 @@ import Layout from "@layouts/Layout.astro";
     <!--The above is the main content for aea pages-->
     <div class="category-items d-flex justify-content-between" style="background-color:#F2F1F0">
     <div class="container">
-    <!--<div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;">-->
+   
+        <h1><span class="animate-charcter">
+            Same Day</span> Appliance Repair
+          </h1>
+          <main class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
+            <div class="py-6 md:order-1 md:block">
+              <p>Same Day Appliance Repair - your destination for all your commercial and household appliance repair needs! We deliver professional appliance repair services, that you can rely on with confidence.<br><br> We have helped thousands of customers, alleviating the stress that comes when appliances malfunction. Our quick response time and efficient work ethic form the cornerstone of our operational approach, aiming to resolve your appliance issues promptly and proficiently.</p>
+             <br><div class="callback">
+              <form class='contact-form' id='simple-contact-form' method='POST' name='simpleContactForm'><input type='hidden' name='form-name' value='simpleContactForm' />
+          <!-- <form name="contact" method="POST" data-netlify="true" onSubmit="submit">-->
+          <label id="contact-form-name-label" for="contact-form-name" class="form-label">Name</label>
+          <input type="text" name="name" id="contact-form-name" aria-labelledby="contact-form-name-label" class="form-input">
+          <label id="contact-form-phone-label" for="contact-form-phone" class="form-label">Phone</label>
+          <input type="tel" name="phone" id="contact-form-phone" aria-labelledby="contact-form-phone-label" class="form-input">
+          <label id="contact-form-message-label" for="contact-form-message" class="form-label">Message</label>
+          <textarea name="message" id="contact-form-message" aria-labelledby="contact-form-message-label" class="form-textarea" rows="2"></textarea>
+          <button class="formbutton" type="submit" style="font-weight:900;">REQUEST A CALLBACK</button>
+          </form>
+          </div> 
+            </div>
+          
+            <div class="text-lg mt-4 text-slate-600 max-w-xl">
+                <img width="480" height="480" style="border-radius: 25px;" src="/images/same-day-appliance-repair-experts.webp">
+               
+              <div class="mt-6 flex flex-col sm:flex-row gap-3">
+                <a
+                  href="#"
+                  href="https://web3templates.com/templates/astroship-starter-website-template-for-astro"
+                  target="_blank"
+                  class="flex gap-1 items-center justify-center"
+                  rel="noopener">
+                  
+          
+                   CALL US: (323)540-5890
+              </a>
+                <a
+                  size="lg"
+                  style="outline"
+                  rel="noopener"
+                  href="https://github.com/surjithctly/astroship"
+                  class="flex gap-1 items-center justify-center"
+                  target="_blank">
+               
+                   BOOK US
+            </a>
+              </div>
+            </div>
+          </main>
+
+
+
+
+
+   
+        <!--<div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;">-->
     <h2>Same Day Appliance Repair Services for Commercial & Household Use in Los Angeles and Surrounding Areas</h2>
     <p>Welcome to the Same Day Appliance Repair - your destination for all your commercial and household appliance repair needs! We pride ourselves on being a trusted business, serving our valued customers since 2007. We deliver professional appliance repair services, that you can rely on with confidence. Over the years, we have helped thousands of customers, alleviating the stress that comes when appliances malfunction. Our quick response time and efficient work ethic form the cornerstone of our operational approach, aiming to resolve your appliance issues promptly and proficiently.</p>
     <p> To guarantee a high quality service, we have invested significantly in the continual education and training of our skilled technicians. Additionally, we maintain a comprehensive inventory of appliance parts, enabling us to tackle a majority of repair challenges in a single visit.</p>
