--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -6,19 +6,19 @@ const features = [
   {
     title: "Same Day Service",
     description:
-      "Build your site using React, Svelte, Vue, Preact, web components, or just plain ol' HTML + JavaScript.",
+      "We have a quick response time, and repair appliances the same day in 90% of cases. Your piece of mind is our priority.",
     icon: "bx:bxs-bell",
   },
   {
     title: "3 Month Warraty",
     description:
-      "Astro renders your entire page to static HTML, removing all JavaScript from your final build by default.",
+      "We are confident in the quality of our service adressing any issues related to the repaired appliance within 3 months at no additional cost.",
     icon: "bx:bxs-bell",
   },
   {
     title: "Upfront Pricing",
     description:
-      "Need some JS? Astro can automatically hydrate interactive components when they become visible on the page.  ",
+      "After our trained technician diagnoses the problem, customer recieves clear and detailed estimate for the cost of the repair before any work begins",
     icon: "bx:bxs-bell",
   },
 ];
