--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -249,75 +249,22 @@ import Layout from "@layouts/Layout.astro";
     <!--The above is the main content for aea pages-->
     <div class="category-items d-flex justify-content-between" style="background-color:#F2F1F0">
     <div class="container">
-   
-        <h1><span class="animate-charcter">
-            Same Day</span> Appliance Repair
-          </h1>
-          <main class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
-            <div class="py-6 md:order-1 md:block">
-              <p>Same Day Appliance Repair - your destination for all your commercial and household appliance repair needs! We deliver professional appliance repair services, that you can rely on with confidence.<br><br> We have helped thousands of customers, alleviating the stress that comes when appliances malfunction. Our quick response time and efficient work ethic form the cornerstone of our operational approach, aiming to resolve your appliance issues promptly and proficiently.</p>
-             <br><div class="callback">
-              <form class='contact-form' id='simple-contact-form' method='POST' name='simpleContactForm'><input type='hidden' name='form-name' value='simpleContactForm' />
-          <!-- <form name="contact" method="POST" data-netlify="true" onSubmit="submit">-->
-          <label id="contact-form-name-label" for="contact-form-name" class="form-label">Name</label>
-          <input type="text" name="name" id="contact-form-name" aria-labelledby="contact-form-name-label" class="form-input">
-          <label id="contact-form-phone-label" for="contact-form-phone" class="form-label">Phone</label>
-          <input type="tel" name="phone" id="contact-form-phone" aria-labelledby="contact-form-phone-label" class="form-input">
-          <label id="contact-form-message-label" for="contact-form-message" class="form-label">Message</label>
-          <textarea name="message" id="contact-form-message" aria-labelledby="contact-form-message-label" class="form-textarea" rows="2"></textarea>
-          <button class="formbutton" type="submit" style="font-weight:900;">REQUEST A CALLBACK</button>
-          </form>
-          </div> 
-            </div>
-          
-            <div class="text-lg mt-4 text-slate-600 max-w-xl">
-                <img width="480" height="480" style="border-radius: 25px;" src="/images/same-day-appliance-repair-experts.webp">
-               
-              <div class="mt-6 flex flex-col sm:flex-row gap-3">
-                <a
-                  href="#"
-                  href="https://web3templates.com/templates/astroship-starter-website-template-for-astro"
-                  target="_blank"
-                  class="flex gap-1 items-center justify-center"
-                  rel="noopener">
-                  
-          
-                   CALL US: (323)540-5890
-              </a>
-                <a
-                  size="lg"
-                  style="outline"
-                  rel="noopener"
-                  href="https://github.com/surjithctly/astroship"
-                  class="flex gap-1 items-center justify-center"
-                  target="_blank">
-               
-                   BOOK US
-            </a>
-              </div>
-            </div>
-          </main>
 
-
-
-
-
-   
         <!--<div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;">-->
-    <h2>Same Day Appliance Repair Services for Commercial & Household Use in Los Angeles and Surrounding Areas</h2>
-    <p>Welcome to the Same Day Appliance Repair - your destination for all your commercial and household appliance repair needs! We pride ourselves on being a trusted business, serving our valued customers since 2007. We deliver professional appliance repair services, that you can rely on with confidence. Over the years, we have helped thousands of customers, alleviating the stress that comes when appliances malfunction. Our quick response time and efficient work ethic form the cornerstone of our operational approach, aiming to resolve your appliance issues promptly and proficiently.</p>
-    <p> To guarantee a high quality service, we have invested significantly in the continual education and training of our skilled technicians. Additionally, we maintain a comprehensive inventory of appliance parts, enabling us to tackle a majority of repair challenges in a single visit.</p>
-    <p>Our range of expertise encompasses appliance diagnostics, appliance maintenance, appliance repair, and appliance installation services, covering a diverse array of residential and commercial appliances across Orange County, CA. Whether it's refrigerators, freezers, ice makers, washers, dryers, ranges, stoves, ovens, cook-tops, wine coolers, microwaves, dishwashers, garbage disposals, or BBQs, we have you covered.</p>
-    <p>We work with all brands, including but not limited to Samsung, Whirlpool, KitchenAid, Bosch, Frigidaire, Maytag, Sub-Zero, Subzero, Kenmore, General Electric, GE, LG, Liebherr, JennAir, Dacor, Thermador, Fisher & Paykel, Viking, Whirlpool, Whirlpool, and numerous others. With Same Day Appliance Repair, you can trust that your appliances are in capable hands. Appliance repair is our expertise, entrusted to our team of skilled professionals. With extensive experience under their belt, our technicians deliver the highest quality repair service.</p></div></div>
+    <br><h2>Same Day Appliance Repair Services for Commercial & Household Use in Los Angeles and Surrounding Areas</h2>
+    <br><p>Welcome to the Same Day Appliance Repair - your destination for all your commercial and household appliance repair needs! We pride ourselves on being a trusted business, serving our valued customers since 2007. We deliver professional appliance repair services, that you can rely on with confidence. Over the years, we have helped thousands of customers, alleviating the stress that comes when appliances malfunction. Our quick response time and efficient work ethic form the cornerstone of our operational approach, aiming to resolve your appliance issues promptly and proficiently.</p>
+    <br><p> To guarantee a high quality service, we have invested significantly in the continual education and training of our skilled technicians. Additionally, we maintain a comprehensive inventory of appliance parts, enabling us to tackle a majority of repair challenges in a single visit.</p>
+    <br><p>Our range of expertise encompasses appliance diagnostics, appliance maintenance, appliance repair, and appliance installation services, covering a diverse array of residential and commercial appliances across Orange County, CA. Whether it's refrigerators, freezers, ice makers, washers, dryers, ranges, stoves, ovens, cook-tops, wine coolers, microwaves, dishwashers, garbage disposals, or BBQs, we have you covered.</p>
+    <br><p>We work with all brands, including but not limited to Samsung, Whirlpool, KitchenAid, Bosch, Frigidaire, Maytag, Sub-Zero, Subzero, Kenmore, General Electric, GE, LG, Liebherr, JennAir, Dacor, Thermador, Fisher & Paykel, Viking, Whirlpool, Whirlpool, and numerous others. With Same Day Appliance Repair, you can trust that your appliances are in capable hands. Appliance repair is our expertise, entrusted to our team of skilled professionals. With extensive experience under their belt, our technicians deliver the highest quality repair service.</p></div></div>
     <div class="category category-0" style="background-color:#ffffff;" >
     <div class="container">
     <h2>Same Day Appliance Repair for Commercial & Household Use - How We Work</h2>
-    <h3>Parts</h3>
-    <p> No matter the issue, we assure fast resolution, eliminating any cause for concern. Our licensed and certified technicians exclusively utilize new, high-quality parts from accredited suppliers. Regular professional training keeps our technicians up-to-date with the latest models and components.</p>
-    <h3>Scheduling</h3>
-    <p>We prioritize prompt service, aiming to reach you on the same day you call, while considering your convenience and scheduling preferences. To ensure efficient repairs, our technicians carry most parts in their vans, enabling immediate solutions. If a part needs ordering, we strive for the fastest possible delivery.</p>
-    <h3>Pricing</h3>
-    <p>Our service call fee is $65. Upon your agreement, this fee will be deducted from the total cost of repair. Furthermore, we provide a 1 year warranty on all installed parts, ensuring long-term peace of mind.</p>
+    <br><h3>Parts</h3>
+    <br><p> No matter the issue, we assure fast resolution, eliminating any cause for concern. Our licensed and certified technicians exclusively utilize new, high-quality parts from accredited suppliers. Regular professional training keeps our technicians up-to-date with the latest models and components.</p>
+    <br><h3>Scheduling</h3>
+    <br><p>We prioritize prompt service, aiming to reach you on the same day you call, while considering your convenience and scheduling preferences. To ensure efficient repairs, our technicians carry most parts in their vans, enabling immediate solutions. If a part needs ordering, we strive for the fastest possible delivery.</p>
+    <br><h3>Pricing</h3>
+    <br><p>Our service call fee is $65. Upon your agreement, this fee will be deducted from the total cost of repair. Furthermore, we provide a 1 year warranty on all installed parts, ensuring long-term peace of mind.</p>
   </div></div></div></div>
     </div>
       </div>
