--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,13 +27,13 @@ const makeTitle = title
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="generator" content={Astro.generator} />
 
     <!-- <link rel="preload" as="image" href={src} alt="Hero" /> -->
     <SEO
       title={makeTitle}
-      description="Astroship is a starter website template for Astro built with TailwindCSS."
+      description="Same Day APlliance Repair Services. Call Us Today: (323)540-5890"
       canonical={canonicalURL}
       twitter={{
         creator: "@surjithctly",
@@ -44,11 +44,11 @@ const makeTitle = title
         basic: {
           url: canonicalURL,
           type: "website",
-          title: `Astroship - Starter Template for Astro`,
+          title: `Same Day Appliance Repair`,
           image: resolvedImageWithDomain,
         },
         image: {
-          alt: "Astroship Homepage Screenshot",
+          alt: "Same Day Appliance Repair",
         },
       }}
     />
@@ -129,10 +129,10 @@ a{color:#0d0b29;text-decoration:none}.d-flex{display:flex}.align-items-center{al
    text-transform: uppercase;
   background-image: linear-gradient(
     -225deg,
-    #231557 0%,
-    #44107a 29%,
-    #ff1361 67%,
-    #fff800 100%
+    #fff 0%,
+    #000 29%,
+    #111112 67%,
+    #858384 100%
   );
   background-size: auto auto;
   background-clip: border-box;
