--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -268,8 +268,7 @@ import Layout from "@layouts/Layout.astro";
   </div></div></div></div>
     </div>
       </div>
- 
-    <iframe title="Same Day Appliance Repair in Los Angeles county" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1697927.8104647622!2d-119.61861138312679!3d33.77964772289582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dd2ad30164cd31%3A0x837d28d6cfbd392a!2sLos%20Angeles%20County%2C%20CA!5e0!3m2!1sen!2sus!4v1699301203257!5m2!1sen!2sus" style="border:0; width:100%; height:450px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe loading="lazy" src="https://www.google.com/maps/d/embed?mid=1a84xIWSuMtSb2xq76UatMAP3GNHzqmw&ehbc=2E312F" style="border:0; width:100%; height:450px;"></iframe>
 </main>
     <Cta />
   </Container>
