--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -240,7 +240,7 @@ import Layout from "@layouts/Layout.astro";
                           <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Wall heater Repair</p>
                           <a style="width:120px" title="Same day wall heater repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
-                          <span title="Same day duckts cleaning repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
+                          <span title="Same day duckts cleaning repair Los Angeles" style="padding:0 40px 0 20px;">
                           <img width="120" height="122" loading="lazy" src="images/duck-cleaning-los-angeles.webp" alt="Range/Stove">
                           <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Ducts Cleaning Repair</p>
                           <a style="width:120px" title="Same day wall heater repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
