--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -13,15 +13,16 @@ const menuitems = [
     title: "Service Areas",
     path: "/areas/los-angeles-and-surrounding-areas",
     children: [
-      { title: "Los Feliz", path: "/areas/los-feliz" },
+    { title: "Los Angees", path: "/los-angeles" },
+    { title: "Pasadena", path: "/pasadena" },  
+    { title: "Los Feliz", path: "/areas/los-feliz" },
       { title: "Marina Del Rey", path: "/areas/marina-del-rey" },
       { title: "Santa Monica", path: "/areas/santa-monica" },
-      { title: "404 Page", path: "/404" },
     ],
   },
   {
     title: "Brands",
-    path: "/blog",
+    path: "/brands/commercial-and-household",
   },
   {
     title: "Contact",
