--- a/src/components/contactform.astro
+++ b/src/components/contactform.astro
@@ -10,7 +10,7 @@ import Button from "./ui/button.astro";
   id="form"
   class="needs-validation"
   novalidate>
-  <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE" />
+  <input type="hidden" name="access_key" value="1d881d82-bde0-46fc-8047-cfaf21357f33" />
   <!-- Create your free access key from https://web3forms.com/ -->
   <input type="checkbox" class="hidden" style="display:none" name="botcheck" />
   <div class="mb-5">
@@ -55,7 +55,7 @@ import Button from "./ui/button.astro";
   <Button type="submit" size="lg" block>Send Message</Button>
   <div id="result" class="mt-3 text-center"></div>
 </form>
-
+<br>
 <style>
   .invalid-feedback,
   .empty-feedback {
