--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -59,7 +59,7 @@ import { Icon } from "astro-icon";
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
       Please enter your message.
     </div>
-  </button type="submit" size="lg" block>Send Message</button>
+  <button type="submit" style="background-color:#000000; color:#ffffff; border-radius: 10px; padding:15px;">REQUEST CALLBACK</button>
   <div id="result" class="mt-3 text-center"></div>
 </form>
 <br>
