--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -58,7 +58,7 @@ import { Icon } from "astro-icon";
     ></textarea>
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
       Please enter your message.
-    </div>
+    </div><br>
   <button type="submit" style="background-color:#000000; color:#ffffff; border-radius: 10px; padding:15px;">REQUEST CALLBACK</button>
   <div id="result" class="mt-3 text-center"></div>
 </form>
