--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -143,7 +143,7 @@ import { Icon } from "astro-icon";
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
         href="#"
-        href="https://web3templates.com/templates/astroship-starter-website-template-for-astro"
+        href="tel:+13235405890"
         target="_blank"
         class="flex gap-1 items-center justify-center"
         rel="noopener">
@@ -155,7 +155,7 @@ import { Icon } from "astro-icon";
         size="lg"
         style="outline"
         rel="noopener"
-        href="https://github.com/surjithctly/astroship"
+        href="/book"
         class="flex gap-1 items-center justify-center"
         target="_blank">
         <Icon class="text-black w-6 h-6" name="bx:bxs-calendar" />
