--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -17,8 +17,7 @@ import { Icon } from "astro-icon";
       <div>
         <h2 class="font-medium text-2xl text-gray-800">Contact Same Day Appliance Repair</h2>
         <p class="text-lg leading-relaxed text-slate-500 mt-3">
-          Have something to say? We are here to help. Fill up the form or send
-          email or call phone.
+          Need help? We are here to help!
         </p>
         <div class="mt-5">
           <div class="flex items-center mt-2 space-x-2 text-gray-600">
@@ -27,11 +26,11 @@ import { Icon } from "astro-icon";
           </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
             <Icon class="text-gray-400 w-4 h-4" name="uil:envelope" /><a
               href="mailto:hello@astroshipstarter.com"
-              >hello@astroshipstarter.com</a
+              >info@samedayappliance.repair</a
             >
           </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
             <Icon class="text-gray-400 w-4 h-4" name="uil:phone" /><a
-              href="tel:+1 (987) 4587 899">+1 (987) 4587 899</a
+              href="tel:+1 (987) 4587 899">+1 (323) 540-5890</a
             >
           </div>
         </div>
