--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -268,7 +268,10 @@ a{color:#0d0b29;text-decoration:none}.d-flex{display:flex}.align-items-center{al
     transform: translateX(-2000px);
   }}
   .items-start{border:1px solid; border-radius: 18px; padding:10px; }
- 
+ /*centered images with a border*/
+.img{
+  border-radius:15px;
+  margin:0 auto 0 auto;}
     </style>
   </body>
 </html>
